--- a/modify2/modify.css
+++ b/modify2/modify.css
@@ -391,6 +391,11 @@ h3.footer-heading {
   .row.py-3 {
     padding: 0px !important;
   }
+  hr {
+    flex: 0 0 100%;
+    max-width: 90% !important;
+    margin: auto;
+  }
   .hero-heading {
     flex-direction: column;
   }
